# porous_media

./: .gitignore  CMakeLists.txt  check.py  check_asymptotics.py  check_dyn.py  configuration.json  dynamic_grid.hpp  dynamic_main.cpp  interpolate.py  main.cpp  methods.hpp  sol_search.py
